Fix unresponsive background on landing page + fixed controls not showing once connected

--- a/src/main/resources/index.css
+++ b/src/main/resources/index.css
@@ -20,6 +20,7 @@
 
 .landingBackground {
     background: url("images/landingBackground.png");
+    background-size: 100%;
 }
 
 .softLandingBackground {
